# opaque

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  rustfmt.toml
crates/opaque_alloc/: Cargo.toml
crates/opaque_alloc/benches/: bench_alloc.rs  bench_opaque_alloc.rs  lib.rs
crates/opaque_alloc/src/: alloc.rs  alloc_inner.rs  lib.rs  try_project_alloc_error.rs
crates/opaque_alloc/tests/: lib.rs  test_opaque_alloc_debug.rs  test_opaque_alloc_global_allocate_layout_align.rs  test_opaque_alloc_global_allocate_layout_over_aligned_align.rs  test_opaque_alloc_global_allocate_layout_over_aligned_size.rs  test_opaque_alloc_global_allocate_layout_size.rs  test_opaque_alloc_global_allocate_zeroed.rs  test_opaque_alloc_is_type.rs
crates/opaque_blob_vec/: Cargo.toml
crates/opaque_blob_vec/benches/: bench_opaque_blob_vec_get_unchecked.rs  bench_opaque_blob_vec_push.rs  bench_opaque_blob_vec_replace_insert.rs  bench_opaque_blob_vec_shift_insert.rs  bench_opaque_blob_vec_shift_remove_forget_unchecked.rs  bench_opaque_blob_vec_swap_remove_forget_unchecked.rs  lib.rs
crates/opaque_blob_vec/src/: blob_vec_memory.rs  lib.rs  opaque_blob_vec.rs  opaque_vec_memory.rs  unique.rs
crates/opaque_blob_vec/tests/: lib.rs  test_opaque_blob_vec_clear_as_slice.rs  test_opaque_blob_vec_clear_is_empty.rs  test_opaque_blob_vec_clear_len.rs  test_opaque_blob_vec_clone.rs  test_opaque_blob_vec_clone_len.rs  test_opaque_blob_vec_push_capacity.rs  test_opaque_blob_vec_push_get_mut_unchecked.rs  test_opaque_blob_vec_push_get_unchecked.rs  test_opaque_blob_vec_push_len.rs  test_opaque_blob_vec_push_slice.rs  test_opaque_blob_vec_replace_insert_as_slice_end.rs  test_opaque_blob_vec_replace_insert_as_slice_start.rs  test_opaque_blob_vec_replace_insert_capacity.rs  test_opaque_blob_vec_replace_insert_drop_panic_safe.rs  test_opaque_blob_vec_replace_insert_get_mut_unchecked.rs  test_opaque_blob_vec_replace_insert_get_unchecked.rs  test_opaque_blob_vec_replace_insert_len.rs  test_opaque_blob_vec_replace_insert_same_index.rs  test_opaque_blob_vec_replace_insert_slice.rs  test_opaque_blob_vec_replace_insert_slice_start.rs  test_opaque_blob_vec_shift_insert_as_slice_end.rs  test_opaque_blob_vec_shift_insert_as_slice_start.rs  test_opaque_blob_vec_shift_insert_capacity.rs  test_opaque_blob_vec_shift_insert_get_mut_unchecked.rs  test_opaque_blob_vec_shift_insert_get_unchecked.rs  test_opaque_blob_vec_shift_insert_len.rs  test_opaque_blob_vec_shift_insert_same_index.rs  test_opaque_blob_vec_shift_insert_slice.rs  test_opaque_blob_vec_shift_insert_slice_end.rs  test_opaque_blob_vec_shift_insert_slice_start.rs  test_opaque_blob_vec_shift_remove_forget_unchecked_end.rs  test_opaque_blob_vec_shift_remove_forget_unchecked_get.rs  test_opaque_blob_vec_shift_remove_forget_unchecked_len.rs  test_opaque_blob_vec_shift_remove_forget_unchecked_start.rs  test_opaque_blob_vec_swap_remove_forget_unchecked_end.rs  test_opaque_blob_vec_swap_remove_forget_unchecked_get.rs  test_opaque_blob_vec_swap_remove_forget_unchecked_len.rs  test_opaque_blob_vec_swap_remove_forget_unchecked_start.rs  test_opaque_blob_vec_truncate_as_slice_length_greater_than_or_equal_to.rs  (+3 more)
crates/opaque_index_map/: Cargo.toml
crates/opaque_index_map/benches/: lib.rs
crates/opaque_index_map/src/: equivalent.rs  get_disjoint_mut_error.rs  index_map.rs  index_map_inner.rs  lib.rs  map.rs  map_inner.rs  range_ops.rs  set.rs  slice_eq.rs  try_project_index_map_error.rs  try_project_index_set_error.rs  try_reserve_error.rs
crates/opaque_index_map/tests/: lib.rs  opaque_map_struct_tests.rs  test_opaque_index_map_clear_as_slice.rs  test_opaque_index_map_clear_is_empty.rs  test_opaque_index_map_clear_len.rs  test_opaque_index_map_clone.rs  test_opaque_index_map_clone_len.rs  test_opaque_index_map_empty.rs  test_opaque_index_map_insert_as_mut_slice.rs  test_opaque_index_map_insert_as_slice.rs  test_opaque_index_map_insert_contains_key.rs  test_opaque_index_map_insert_full_as_mut_slice.rs  test_opaque_index_map_insert_full_as_slice.rs  test_opaque_index_map_insert_full_contains_key.rs  test_opaque_index_map_insert_full_get.rs  test_opaque_index_map_insert_full_get_full.rs  test_opaque_index_map_insert_full_get_full_mut.rs  test_opaque_index_map_insert_full_get_index_of.rs  test_opaque_index_map_insert_full_get_key_value.rs  test_opaque_index_map_insert_full_get_mut.rs  test_opaque_index_map_insert_full_iter.rs  test_opaque_index_map_insert_full_iter_mut.rs  test_opaque_index_map_insert_full_len.rs  test_opaque_index_map_insert_full_preserves_order_new_entry.rs  test_opaque_index_map_insert_full_values.rs  test_opaque_index_map_insert_full_values_mut.rs  test_opaque_index_map_insert_get.rs  test_opaque_index_map_insert_get_full.rs  test_opaque_index_map_insert_get_full_mut.rs  test_opaque_index_map_insert_get_index_of.rs  test_opaque_index_map_insert_get_key_value.rs  test_opaque_index_map_insert_get_mut.rs  test_opaque_index_map_insert_iter.rs  test_opaque_index_map_insert_iter_mut.rs  test_opaque_index_map_insert_len.rs  test_opaque_index_map_insert_preserves_order_new_entry.rs  test_opaque_index_map_insert_values.rs  test_opaque_index_map_insert_values_mut.rs  test_opaque_index_map_is_empty.rs  test_opaque_index_map_iter_contains_key.rs  (+58 more)
crates/opaque_index_set/: Cargo.toml
crates/opaque_vec/: Cargo.toml
crates/opaque_vec/benches/: bench_opaque_vec_as_slice_index.rs  bench_opaque_vec_get.rs  bench_opaque_vec_pop.rs  bench_opaque_vec_push.rs  bench_opaque_vec_replace_insert.rs  bench_opaque_vec_shift_insert.rs  bench_opaque_vec_shift_remove.rs  bench_opaque_vec_swap_remove.rs  lib.rs
crates/opaque_vec/src/: drain.rs  extract_if.rs  into_iter.rs  lib.rs  opaque_blob_vec.rs  opaque_vec_inner.rs  opaque_vec_memory.rs  range_types.rs  raw_vec.rs  splice.rs  try_project_vec_error.rs  try_reserve_error.rs  unique.rs  vec.rs  vec_inner.rs  zst.rs
crates/opaque_vec/tests/: lib.rs  test_opaque_vec_as_mut_slice.rs  test_opaque_vec_as_slice.rs  test_opaque_vec_clear_as_slice.rs  test_opaque_vec_clear_is_empty.rs  (+56 more)
src/: lib.rs
(+1977 files in other folders)
