[package]
name = "opaque"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = [
    "opaque_alloc/std",
    "opaque_error/std",
    "opaque_hash/std",
    "opaque_index_map/std",
    "opaque_vec/std",
    "opaque_allocator_api/std"
]
nightly = [
    "opaque_alloc/nightly",
    "opaque_hash/nightly",
    "opaque_index_map/nightly",
    "opaque_vec/nightly",
    "opaque_allocator_api/nightly"
]

[dependencies]

[dependencies.opaque_alloc]
path = "crates/opaque_alloc"

[dependencies.opaque_allocator_api]
path = "crates/opaque_allocator_api"

[dependencies.opaque_error]
path = "crates/opaque_error"

[dependencies.opaque_hash]
path = "crates/opaque_hash"

[dependencies.opaque_vec]
path = "crates/opaque_vec"

[dependencies.opaque_index_map]
path = "crates/opaque_index_map"

[workspace]
members = [
    "crates/*"
]
