[package]
name = "opaque"
version = "1.1.0"
edition = "2024"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A library for working with type-erased generic collections using runtime type information."
categories = [
    "data-structures",
    "no-std",
]
keywords = [
    "no_std",
    "type-erased",
    "hetergeneous",
    "containers",
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/opaque"

[lib]
name = "opaque"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = [
    "opaque_alloc/std",
    "opaque_error/std",
    "opaque_hash/std",
    "opaque_index_map/std",
    "opaque_vec/std",
    "opaque_allocator_api/std",
]
nightly = [
    "opaque_alloc/nightly",
    "opaque_hash/nightly",
    "opaque_index_map/nightly",
    "opaque_vec/nightly",
    "opaque_allocator_api/nightly",
]

[dependencies]

[dependencies.opaque_alloc]
path = "crates/opaque_alloc"

[dependencies.opaque_allocator_api]
path = "crates/opaque_allocator_api"

[dependencies.opaque_error]
path = "crates/opaque_error"

[dependencies.opaque_hash]
path = "crates/opaque_hash"

[dependencies.opaque_vec]
path = "crates/opaque_vec"

[dependencies.opaque_index_map]
path = "crates/opaque_index_map"

[workspace]
members = [
    "crates/*"
]
