[package]
name = "opaque_alloc"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []
nightly = []

[dependencies]

[dependencies.opaque_polyfill]
version = "0.1.0"
path = "../opaque_polyfill"

[dependencies.allocator-api2]
version = "0.3.0"
# optional = true
default-features = false
features = ["alloc"]

[dev-dependencies]

[dev-dependencies.criterion]
version = "0.6.0"

[[bench]]
name = "bench_opaque_alloc"
harness = false
path = "benches/lib.rs"
