[package]
name = "opaque_alloc"
version = "1.2.0"
edition = "2024"

[features]
default = ["std"]
std = []
nightly = []

[dependencies]

[dependencies.opaque_allocator_api]
version = "1.2.0"
path = "../opaque_allocator_api"

[dependencies.opaque_polyfill]
version = "1.2.0"
path = "../opaque_polyfill"

[dev-dependencies]

[dev-dependencies.criterion]
version = "0.6.0"

[[bench]]
name = "bench_type_erased_alloc"
harness = false
path = "benches/lib.rs"
