[package]
name = "opaque_index_map"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.equivalent]
version = "1.0.2"
default-features = false

[dependencies.hashbrown]
version = "0.15.2"

[dependencies.opaque_alloc]
path = "../opaque_alloc"

[dependencies.opaque_error]
path = "../opaque_error"

[dependencies.opaque_hash]
path = "../opaque_hash"

[dependencies.opaque_vec]
path = "../opaque_vec"

[dev-dependencies]

[dev-dependencies.opaque_testing]
version = "0.1.0"
path = "../opaque_testing"
