[package]
name = "opaque_index_map"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["opaque_alloc/std", "opaque_error/std", "opaque_hash/std", "opaque_vec/std"]

[dependencies]
criterion = "0.6.0"

[dependencies.equivalent]
version = "1.0.2"
default-features = false

[dependencies.hashbrown]
version = "0.15.4"

[dependencies.opaque_alloc]
path = "../opaque_alloc"

[dependencies.opaque_error]
path = "../opaque_error"

[dependencies.opaque_hash]
path = "../opaque_hash"

[dependencies.opaque_vec]
path = "../opaque_vec"

[dev-dependencies]

[dev-dependencies.proptest]
version = "1.7.0"

[dev-dependencies.indexmap]
version = "2.9.0"

[[bench]]
name = "bench_opaque_index_map"
harness = false
path = "benches/lib.rs"
