[package]
name = "opaque_index_map"
version = "1.3.0"
edition = "2024"

[features]
default = ["std"]
std = ["opaque_alloc/std", "opaque_error/std", "opaque_hash/std", "opaque_vec/std"]
nightly = ["opaque_alloc/nightly", "opaque_hash/nightly", "opaque_vec/nightly"]

[dependencies]
criterion = "0.6.0"

[dependencies.equivalent]
version = "1.0.2"
default-features = false

[dependencies.hashbrown]
version = "0.15.4"

[dependencies.opaque_allocator_api]
version = "1.3.0"
path = "../opaque_allocator_api"

[dependencies.opaque_alloc]
path = "../opaque_alloc"

[dependencies.opaque_error]
path = "../opaque_error"

[dependencies.opaque_hash]
path = "../opaque_hash"

[dependencies.opaque_vec]
path = "../opaque_vec"

[dev-dependencies]

[dev-dependencies.proptest]
version = "1.7.0"

[dev-dependencies.indexmap]
version = "2.10.0"

[[bench]]
name = "bench_type_erased_index_map"
harness = false
path = "benches/lib.rs"
