[package]
name = "opaque_vec"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["opaque_alloc/std", "opaque_error/std", "opaque_range_types/std"]

[dependencies]

[dependencies.opaque_alloc]
version = "0.1.0"
path = "../opaque_alloc"

[dependencies.opaque_error]
version = "0.1.0"
path = "../opaque_error"

[dependencies.opaque_range_types]
version = "0.1.0"
path = "../opaque_range_types"

[dev-dependencies]

[dev-dependencies.opaque_vec_testing]
version = "0.1.0"
path = "../opaque_vec_testing"

[dev-dependencies.criterion]
version = "0.6.0"

[dev-dependencies.proptest]
version = "1.7.0"

[lints.rust.unexpected_cfgs]
level = "warn"

[[bench]]
name = "bench_opaque_vec"
harness = false
path = "benches/lib.rs"
