[package]
name = "opaque_vec"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["opaque_alloc/std", "opaque_error/std", "opaque_polyfill/std"]
nightly = ["opaque_alloc/nightly"]

[dependencies]

[dependencies.opaque_alloc]
version = "0.1.0"
path = "../opaque_alloc"

[dependencies.opaque_error]
version = "0.1.0"
path = "../opaque_error"

[dependencies.opaque_polyfill]
version = "0.1.0"
path = "../opaque_polyfill"

[dependencies.allocator-api2]
version = "0.3.0"
# optional = true
default-features = false
features = ["alloc"]

[dev-dependencies]

[dev-dependencies.criterion]
version = "0.6.0"

[dev-dependencies.proptest]
version = "1.7.0"

[lints.rust.unexpected_cfgs]
level = "warn"

[[bench]]
name = "bench_opaque_vec"
harness = false
path = "benches/lib.rs"
