[package]
name = "opaque_vec"
version = "1.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["opaque_alloc/std", "opaque_error/std", "opaque_polyfill/std", "opaque_allocator_api/std"]
nightly = ["opaque_alloc/nightly", "opaque_allocator_api/nightly"]

[dependencies]

[dependencies.opaque_alloc]
version = "1.1.0"
path = "../opaque_alloc"

[dependencies.opaque_error]
version = "1.1.0"
path = "../opaque_error"

[dependencies.opaque_allocator_api]
version = "1.1.0"
path = "../opaque_allocator_api"

[dependencies.opaque_polyfill]
version = "1.1.0"
path = "../opaque_polyfill"

[dev-dependencies]

[dev-dependencies.criterion]
version = "0.6.0"

[dev-dependencies.proptest]
version = "1.7.0"

[lints.rust.unexpected_cfgs]
level = "warn"

[[bench]]
name = "bench_type_erased_vec"
harness = false
path = "benches/lib.rs"
